# binary-pkg-test

./: .devassistant  .gitignore  Makefile.am  README.md  binary-pkg-test.spec  configure.ac  library.cpp  library.h  main.cpp
